[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rascal-ties"
authors = [
    {name = "Alvaro Gonzalez-Cervera", email = "alvaro@intermet.es"},
]
description = "Open-source tool for climatological time series reconstruction and extension"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
        "numpy==1.26.4",
        "pandas==2.2.1",
        "dask==2024.4.1",
        "xarray==2024.3.0",
        "scipy==1.13.0",
        "tqdm==4.65.0",
        "scikit-learn==1.4.1.post1",
        "seaborn==0.13.2",
        "eofs==1.4.1",
        "matplotlib==3.5.5"
]

[tools.setuptools.dynamic]
version = {attr = "rascal.__version__"}

[tool.setuptools.package-dir]
rascal = "rascal"