[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rascal-ties"
authors = [
    {name = "Alvaro Gonzalez-Cervera", email = "alvaro@intermet.es"},
]
description = "Open-source tool for climatological time series reconstruction and extension"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "dask==2024.4.1",
    "xarray==2024.3.0",
    "scipy>=1.13.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.4.1.post1",
    "seaborn>=0.13.2",
    "eofs>=1.4.1",
    "matplotlib>=3.5.5",
    "sphinx-rtd-theme>=1.2.2",
    "sphinx>=7.3.7",
    "sphinx-copybutton>=0.5.2",
    "cfgrib>=0.9.12.0",
    "netCDF4>=1.7.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "rascal.__version__"}

[tool.setuptools.package-dir]
rascal = "rascal"

[project.urls]
homepage = "https://github.com/alvaro-gc95/RASCAL"
documentation = "https://rascalv100.readthedocs.io/en/latest/"
repository = "https://github.com/alvaro-gc95/RASCAL"

[tool.hatch.build.targets.sdist]
strict-naming = false

[tool.hatch.build.targets.wheel]
strict-naming = false
packages = ["rascal"]